feat: logic user, tournament teams and games added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,18 @@
       ],
       "@libs/redis/*": [
         "libs/redis/src/*"
+      ],
+      "@libs/event-broker": [
+        "libs/event-broker/src"
+      ],
+      "@libs/event-broker/*": [
+        "libs/event-broker/src/*"
+      ],
+      "@libs/healthcheck": [
+        "libs/healthcheck/src"
+      ],
+      "@libs/healthcheck/*": [
+        "libs/healthcheck/src/*"
       ]
     }
   },
