--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
@@ -31,6 +32,7 @@
     "cache-manager-redis-yet": "^5.1.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "kafkajs": "^2.2.4",
     "mysql2": "^3.10.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -85,7 +87,9 @@
       "^@app/utils(|/.*)$": "<rootDir>/libs/utils/src/$1",
       "^@app/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
       "^libs/sdk-gateway-dto(|/.*)$": "<rootDir>/libs/sdk-gateway-dto/src/$1",
-      "^libs/redis(|/.*)$": "<rootDir>/libs/redis/src/$1"
+      "^libs/redis(|/.*)$": "<rootDir>/libs/redis/src/$1",
+      "^@libs/event-broker(|/.*)$": "<rootDir>/libs/event-broker/src/$1",
+      "^@libs/healthcheck(|/.*)$": "<rootDir>/libs/healthcheck/src/$1"
     }
   }
 }
